<resources>
    <string name="app_name">念佛机</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="zhuyi"> 注意 </string>
    <string name="zhezhen"> 真的要修改吗？ </string>
    <string name="hao"> 好 </string>
    <string name="quxiao"> 取消 </string>
    <string name="tishi"> 提示 </string>
    <string name="qinan"> 请按要求输入内容。 </string>
    <string name="chongzhi"> 重置完毕 </string>
    <string name="foyue1"> 1：南无阿弥陀佛 </string>
    <string name="foyue2"> 2：大悲咒 </string>
    <string name="foyue3"> 3：大明咒 </string>
    <string name="foyue4"> 4: 大悲十小咒  </string>
    <string name="foyue5"> 5: 观世音菩萨圣号 </string>
    <string name="foyue6"> 6：六字真言颂-六字断除六道苦难 </string>
    <string name="foyue7"> 7：准提咒 </string>
    <string name="foyue8"> 8: 长寿佛经 </string>
    <string name="foyue9"> 9: 药师心咒 </string>
    <string name="foyue10"> 10: 莲池赞 </string>
    <string name="foyue11"> 11: 往生咒  </string>
    <string name="foyue12"> 12: 悉发菩提心 </string>
    <string name="foyue13"> 13: 楞严咒  </string>
    <string name="foyue14"> 14: 万佛圣城梵呗 </string>
    <string name="foyue15"> 15: 净土发愿文  </string>
    <string name="foyue16"> 16: 赞佛偈  </string>
    <string name="foyue17"> 17: 杨枝净水赞  </string>
    <string name="foyue18"> 18: 释迦牟尼佛心咒 </string>
    <string name="foyue19"> 19: 阿弥陀佛心咒 </string>
    <string name="foyue20"> 20: 文殊菩萨心咒</string>
    <string name="foyue21"> 21: 金刚萨埵心咒 </string>
    <string name="foyue22"> 22: 般若波罗密多心经 </string>
    <string name="foyue23"> 23: 心陀罗尼经大悲神咒 </string>
    <string name="foyue24">24: 心经</string>
    <string name="foyue25">25: 念佛静心曲</string>
    <string name="foyue26">26: 财神咒</string>
    <string name="foyue27">27: 绿度母心咒</string>
    <string name="foyue28">28: 佛顶尊胜佛母心咒</string>
    <string name="foyue29">29: 南无大愿地藏王菩萨</string>
    <string name="ninmeiyou"> 打开paypal.me失败，请直接paypal付款谢谢，爱你们！ </string>
    <string name="ninmeiyouzhi"> 您没有支付宝客户端，你可以加我的微信谢谢，爱你们！ </string>
    <string name="feichang"> 非常感谢您的反馈，我会做得更好。 </string>
    <string name="ganxie"> 感谢！ </string>
    <string name="qinanyaoqiu"> 请按要求输入内容。 </string>
    <string name="foyueyouyang"> 佛乐悠扬 </string>
    <string name="ninyi"> 您已于此诵佛  </string>
    <string name="tian"> 天 </string>
    <string name="maindi_1"> 菩提本无树，明镜亦非台 </string>
    <string name="maindi_2"> 一花一世界，一佛一如来 </string>
    <string name="maindi_3"> 大悲无泪，大悟无言，大笑无声 </string>
    <string name="maindi_4"> 若欲求佛但求心，只这心心心是佛 </string>
    <string name="maindi_5"> 一念之慈，万物皆善 </string>
    <string name="maindi_6"> 一念愚即般若绝，一念智即般若生 </string>
    <string name="maindi_7"> 坐亦禅，行亦禅 </string>
    <string name="maindi_8"> 谁将烟焚散，散了纵横的牵绊 </string>
    <string name="maindi_9"> 人生的真理，只是藏在平淡无味之中 </string>
    <string name="ganxiefankui"> 非常感谢您的反馈，我会做得更好。 </string>
    <string name="bofangmoshi"> 播放模式 </string>
    <string name="shuomin1"> 单曲循环 顺序播放 </string>
    <string name="chongzhitianshu"> 恢复天数 </string>
    <string name="shuomin2"> 重新设定念佛天数 </string>
    <string name="yijianfankui"> 意见反馈 </string>
    <string name="ganxieninti"> 提供您宝贵的建议，帮助我做的更好 </string>
    <string name="tuijianqumu"> 推荐曲目 </string>
    <string name="shuomin3"> 给我们推荐您想要添加的曲目 </string>
    <string name="guanyuruanjian"> 软件信息 </string>
    <string name="shuomin4"> 查看关于app版本等信息 </string>
    <string name="quedin"> 确定 </string>
    <string name="danquxunhuan"> 单曲循环 </string>
    <string name="shunxvbofang"> 顺序播放 </string>
    <string name="qinxuanze"> 请选择播放模式 </string>
    <string name="shurushiji"> 输入实际念佛天数 </string>
    <string name="nindejianyi"> 您的建议:  </string>
    <string name="tijiao"> 提交 </string>
    <string name="ganxieninde"> 感谢您的宝贵建议, 您也可以留下联系方式 </string>
    <string name="banben">  念佛 Ver 1.0 </string>
    <string name="juanzeng1"> 五百年前结缘来，前生注定非今日\n短短今生一面遇，前世多少香火缘 </string>
    <string name="juan_button1">    捐助有缘人    </string>
    <string name="zhifuhaoma"> Paypal：133 689 2373 @qq.com\n微   信：H 133 689 2373 </string>
    <string name="zhifushuomin"> 您可以通过下面的按钮进行PayPal捐赠，也可以加我微信，加我好友然后发我发一个小红包表示支持哦, 或者支付宝也是上面的邮箱账号， 您的支持会让更多的人使用本软件念佛，(＾－＾)V\n弘扬佛法  功德无量  </string>
    <string name="zhufu"> 愿佛光注照全家，祈如意伴您永远，爱你们 </string>
    <string name="chuanbofoyue"> 传播佛乐  功德无量 </string>
    <string name="ninxiwang"> 您希望我们添加的曲目:  </string>
    <string name="shezhi">  设置 </string>
    <string name="tianshushedin"> 天数设定  </string>
    <string name="foxinchanwen">  佛心禅闻 </string>
    <string name="ruanjianxinxi"> 软件信息  </string>
    <string name="chongzhianniu"> 恢复  </string>
    <string name="qinbuyao"> 该功能仅仅用于更换手机或重装软件后造成数据丢失后的恢复手段，请根据自己的实际天数修改，诚心修行，阿弥陀佛！ </string>
    <string name="juanzeng"> &#160;&#160;&#160;捐赠有缘人&#160;&#160;&#160; </string>
    <string name="juanzhuyouyuan"> &#160;&#160;&#160;捐助有缘人&#160;&#160;&#160;  </string>
    <string name="lijijuanzeng"> &#160;&#160;PayPal&#160;&#160;  </string>
    <string name="zhichi">立即支持</string>
    <string name="zhifubao"> &#160;&#160;支付宝&#160;&#160; </string>
    <string name="guanyuzuozhe"> 关于作者  </string>
    <string name="liaojie"> 了解关于app的制作初衷  </string>
    <string name="guanyuzuozhe1">曾经的我看见过许多的人为了念佛，购买了一种小小的叫做念佛机的东西。但甚为遗憾的是有许多的念佛机质量都不太好，很可能几个月甚至几周就坏了。同时它所包含的佛乐也很有限，可能还要去买那种7号电池使用，长期下来这也是一笔不小额外的开支且也对环境造成了一定的破坏。更让人尴尬的是传统的念佛机并没有显示屏换曲极为不便。同时它的普及率不高，中年人往往是没有的，但是手机却几乎人手一部。我现在只是一名学生，显然并没有什么能力去修桥铺路做大善事，某虽不才，但还能够勉强写这个app供大家使用，如果您愿意，可以在微信给我发个小红包对我的工作的表示支持哦，您的支持会让更多的人使用本软件念佛，功德无量。阿弥陀佛！很高兴认识你</string>
    <string name="foyoujiaoli">佛友交流</string>
    <string name="dinshiguanbi">定时关闭</string>
    <string name="xuanzeguanbi">选择关闭时间</string>
    <string name="qinshuru">请输入您的昵称</string>
    <string name="fenxiangwude">您可以输入您的心得，与大家共勉。</string>
    <string name="fenxiang">分享</string>
    <string name="fenxiangxinde">分享心得</string>
    <string name="zantinbofang">暂停播放</string>
    <string name="jixvbofang">继续播放</string>
    <string name="dishiguanbi">定时关闭</string>
    <string name="tuichuruanjian">退出软件</string>
    <string name="tianjiafoyue">添加佛乐</string>
    <string name="meixuanze">您没有选择定时</string>
    <string name="houzidong">后自动关闭</string>
    <string name="tianjianContent">"在您的手机SD卡根目录下有一个名为“念佛机”的文件夹，找到它并将您自己的mp3佛乐放入其中，它便能够加入到这个列表中供您播放。"</string>
    <string name="guanyu2">V3.0 又过了两个多月，我还是又跑回来更新这APP了，这一次添加了导入佛乐功能，彻底解决了曲目少、曲目短的严重缺陷，使得它真正变成了一个可以让大多数人 都接受念佛机。同时界面也进行了小小的修改优化。我愿用以后所有的时光善待自己，以缅怀那些生命中永远不会逝去的曾经，生活从来都不是那么简单。不论事情变得多坏，在不远的地方，相信总会有一些美好即将来临。
\n\n---------------------------------------------------------------\n\n
V2.0 时隔了好几个月，对我而言都快一个学期了，终于又有机会回来更新了这个念佛机，在这几个月里我收到了很多反馈以及曲目推荐，我百忙中抽出了一点时间将许多本应该有的功能加上，并整理了曲目。不知是否有从一开始就一直使用1.0版本的人现在升级了这个2.0版本呢？ 我很欣慰。
在一个最美的时光里,遇见了许许多多的人。发生了许许多多的事，在一以天计算的时光里, 我们感到如此忧伤与快乐。但我相信, 无论发生什么事情，它都是生命中能唯一会发生的事情。，无论看起来多么巧合，所有的偶遇都是久违的重逢，所有的偶然都是必然的假象。无论事情发生在什么时候，都是正确的时候。在你觉得为时已晚的时刻，恰恰是最早的时候。</string>

    </resources>
