<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:hint="@string/shurushiji"
        android:padding="20dp"
        android:id="@+id/chongzhi_edittext"
        android:inputType="number"
        android:textSize="25sp"
        android:maxLines="1"
        android:maxLength="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/chongzhi_button"
        android:textSize="19sp"
        android:background="#03a9f4"
        android:layout_marginTop="40dp"
        android:text="@string/chongzhianniu"
        android:layout_margin="15dp"
        android:textColor="#FAFAFA"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="15sp"
        android:padding="10dp"
        android:text="@string/qinbuyao"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
