<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:text="@string/ninxiwang"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center_vertical"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >
        <EditText
            android:id="@+id/fankui_content"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:minLines="8"
            android:hint="@string/ganxieninde" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fankui_button"
        android:textSize="19sp"
        android:background="#03a9f4"
        android:layout_marginTop="18dp"
        android:text="@string/tijiao"
        android:layout_margin="15dp"
        android:textColor="#FAFAFA"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
