<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-5dp"
        android:adjustViewBounds="true"
        android:src="@drawable/foxiang_press"
        android:id="@+id/juanzeng_foxiang"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3.5" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_weight="1.4"
        android:text="@string/zhifuhaoma"
        android:layout_gravity="center_horizontal"
        android:lineSpacingMultiplier="1.45"
        android:gravity="center_horizontal"
        android:textColor="#FAFAFA"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_horizontal"
        android:text="@string/zhifushuomin"
        android:layout_gravity="center_horizontal"
        android:lineSpacingMultiplier="1.35"
        android:textColor="#E1E1E1"
        android:layout_weight="2"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:textColor="#ff7043"
        android:layout_marginTop="-4dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_horizontal"
        android:text="@string/zhufu"
        android:layout_gravity="center_horizontal"
        android:lineSpacingMultiplier="1.35"
        android:layout_weight="0.7"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:orientation="horizontal" >
        <Button
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="#FAFAFA"
            android:background="@drawable/zhifubao_background"
            android:padding="10dp"
            android:alpha="0.95"
            android:elevation="8dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/zhifubao_button"
            android:textSize="19sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/lijijuanzeng"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="#FAFAFA"
            android:background="@drawable/zhifubao_background"
            android:padding="10dp"
            android:layout_weight="1"
            android:alpha="0.95"
            android:elevation="8dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/paypal_button"
            android:textSize="19sp"
            android:layout_width="0dp"
            android:text="@string/zhifubao"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
