<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10.0dip" >

        <EditText
            android:id="@+id/add_nichen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qinshuru"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="16.0sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10.0dip" >

        <EditText
            android:id="@+id/add_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fenxiangwude"
            android:maxLength="300"
            android:minLines="7"
            android:textSize="16.0sp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fankui_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15.0dip"
        android:layout_marginTop="18.0dip"
        android:background="@drawable/tijiao_button"
        android:text="@string/fenxiang"
        android:textColor="#fffafafa"
        android:textSize="19.0sp"/>
</LinearLayout>