<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/juanzeng_background"
    android:orientation="vertical" >

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:src="@drawable/foxiang_press"
        android:id="@+id/juanzeng_foxiang"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.1">
        <TextView
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center_horizontal"
            android:text="@string/guanyuzuozhe1"
            android:layout_gravity="center_horizontal"
            android:lineSpacingMultiplier="1.4"
            android:textColor="#E1E1E1"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp" />
    </ScrollView>

    <TextView
        android:textColor="#ff7043"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_horizontal"
        android:text="@string/zhufu"
        android:layout_gravity="center_horizontal"
        android:lineSpacingMultiplier="1.35 "
        android:layout_weight="0.25"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp" />

    <Button
        android:textColor="#FAFAFA"
        android:background="@drawable/zhifubao_background"
        android:padding="10dp"
        android:alpha="0.95"
        android:elevation="8dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/guanyuzuozhe_button"
        android:textSize="21sp"
        android:layout_width="wrap_content"
        android:text="@string/lijijuanzeng"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />

</LinearLayout>
